fix(breadcrumbs): add global spacing styles

--- a/src/styles/objects/_word.scss
+++ b/src/styles/objects/_word.scss
@@ -5,10 +5,6 @@
   flex-direction: column;
   gap: 2rem;
 
-  .c-breadcrumbs {
-    margin: 20px 0 15px;
-  }
-
   .c-word-of-the-day-crown {
     align-self: center;
     color: vars.$gold;
